<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context="mainproject.mainroject.story.home">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/story_logo"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_image_black_24dp"
            android:contentDescription="@string/storycover" />

        <LinearLayout
            android:id="@+id/titleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/story_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/Azure"
                android:hint="story Name"
                android:layout_margin="15dp"
                android:inputType="text"
                android:textSize="12sp"
                android:maxLength="100"
                android:padding="5dp"
                android:singleLine="true"
                tools:ignore="LabelFor" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="main category"
            android:textAppearance="?attr/textAppearanceListItem" />

        <Spinner
            android:id="@+id/addingstoriestypes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/normaledittextsty"
            android:dropDownSelector="@drawable/btn_homestyle"
            android:dropDownWidth="wrap_content"
            android:padding="2dp"
            android:popupBackground="@color/White"
            android:spinnerMode="dropdown"
            android:ellipsize="marquee"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="sub category"
            android:textAppearance="?attr/textAppearanceListItem" />

        <Spinner
            android:id="@+id/addingSubCategories"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/normaledittextsty"
            android:dropDownSelector="@drawable/btn_homestyle"
            android:dropDownWidth="wrap_content"
            android:padding="5dp"
            android:popupBackground="@color/White"
            android:spinnerMode="dialog"
            android:ellipsize="marquee"/>

        <EditText
            android:id="@+id/BookAuthors"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:hint="BookAuthor"
            android:layout_margin="15dp"
            android:background="@drawable/normaledittextsty"
            android:defaultFocusHighlightEnabled="true"

            android:ems="3"
            android:fontFamily="sans-serif-condensed"
            android:singleLine="true"

            />
        <LinearLayout
            android:id="@+id/pdfform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/story_description"
                android:textAppearance="?attr/textAppearanceListItem" />

            <EditText
                android:id="@+id/pdfstrydescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:background="@drawable/normaledittextsty"
                android:defaultFocusHighlightEnabled="true"
                android:ems="3"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/storydescription"
                android:inputType="textMultiLine|textImeMultiLine"
                android:lineSpacingExtra="8sp"
                android:lines="@integer/google_play_services_version"
                android:minLines="40"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:singleLine="false"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:typeface="normal"
                tools:targetApi="o" />

            <LinearLayout
                android:id="@+id/codeslist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:padding="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/generate"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left|center"

                    android:layout_marginEnd="20dp"
                    android:visibility="gone"
                    android:layout_marginRight="20dp"
                    tools:ignore="RtlHardcoded" />

                <ImageButton
                    android:id="@+id/captureIsbnAndEAN"
                    android:layout_width="0dp"
                    android:layout_height="50dp"

                    android:layout_weight="1"
                    android:background="@color/White"
                    app:srcCompat="@drawable/icons8_barcode_80"
                    />
                <EditText
                    android:id="@+id/ISBN"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="ISBN"
                    android:layout_margin="2dp"
                    android:background="@drawable/normaledittextsty"
                    android:editable="false"
                    android:inputType="none"
                    android:padding="2dp"
                    />
                <EditText
                    android:id="@+id/EAN"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:hint="EAN"
                    android:background="@drawable/normaledittextsty"
                    android:editable="false"
                    android:inputType="none"
                    android:padding="2dp"
                    />
                </LinearLayout>

            <TextView
                android:id="@+id/ISBNhint"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="make sure that you have captured Valid ISBN AND EAN, Or you accept our disclaimers by checking check box"/>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/uploadedfilename"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:background="@color/White"
                    android:text="Upload File"
                    android:textAlignment="center" />

                <ImageButton
                    android:id="@+id/uploadpdffile"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#80FAFAFF"
                    app:srcCompat="@drawable/ic_file_upload_black_24dp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <CheckBox
                android:id="@+id/uploadingdisclaimerBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="By clicking this, you accept Our Disclaimer"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/freeButton"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/free_1_time"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/publishing_stories_which_wrote_on_app_costs_2_n_and_pdf_costs_5"
            android:textAppearance="?attr/textAppearanceListItem" />

        <LinearLayout
            android:id="@+id/transform"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/useAppentry"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@android:color/holo_red_light"
                android:padding="5dp"
                android:enabled="false"
                android:text= "@string/write_your_story_here" />

            <Button
                android:id="@+id/uploadingpdfform"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@android:color/holo_red_light"
                android:padding="5dp"
                android:text="@string/use_pdf_story" />
        </LinearLayout>

        <Button
            android:id="@+id/closingpages"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/checkanotherway"
            android:visibility="gone" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/storypages"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:visibility="gone" />
        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
        <!--<EditText-->
        <!--android:id="@+id/userEntry"-->
        <!--android:scrollbarAlwaysDrawVerticalTrack="true"-->
        <!--android:layout_width="400dp"-->
        <!--android:layout_height="400dp"-->
        <!--android:autoText="true"-->
        <!--android:inputType="text"-->
        <!--android:lines="@integer/google_play_services_version"-->
        <!--android:minLines="40"-->
        <!--android:hint="@string/type_your_story_here"-->
        <!--android:textAllCaps="false"-->
        <!--android:defaultFocusHighlightEnabled="true"-->
        <!--tools:targetApi="o" />-->
        <!--<ImageButton-->
        <!--android:baselineAlignBottom="true"-->
        <!--android:id="@+id/storyimg"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:clickable="false"-->
        <!--android:defaultFocusHighlightEnabled="true"-->
        <!--/></LinearLayout>-->
        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
        <!--<EditText-->
        <!--android:id="@+id/userEntry2"-->
        <!--android:scrollbarAlwaysDrawVerticalTrack="true"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="400dp"-->
        <!--android:autoText="true"-->
        <!--android:inputType="text"-->
        <!--android:lines="@integer/google_play_services_version"-->
        <!--android:minLines="40"-->
        <!--android:hint="@string/type_your_story_here"-->
        <!--android:textAllCaps="false"-->
        <!--android:defaultFocusHighlightEnabled="true" />-->

        <!--<ImageButton-->
        <!--android:baselineAlignBottom="true"-->
        <!--android:id="@+id/storyimg2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:clickable="false"-->
        <!--android:defaultFocusHighlightEnabled="true"-->
        <!--/></LinearLayout>-->


        <LinearLayout
            android:id="@+id/appentryprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/submitStory"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/preparing_strybtns"
                android:text="@string/publish" />

            <EditText
                android:id="@+id/pricebox"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:hint="@string/type_price"
                android:inputType="number|numberDecimal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
